fix: visual tests using specific letter spacing add em

--- a/projects/angular/src/utils/variables/_properties.typography.scss
+++ b/projects/angular/src/utils/variables/_properties.typography.scss
@@ -81,7 +81,7 @@
     --clr-p0-font-size: #{tokens.$cds-alias-typography-body-font-size};
     --clr-p0-font-weight: #{tokens.$cds-alias-typography-body-font-weight};
     --clr-p0-line-height: 1.4285714em; // #{tokens.$cds-alias-typography-body-line-height};
-    --clr-p0-letter-spacing: -0.007142857; //#{tokens.$cds-alias-typography-body-letter-spacing};
+    --clr-p0-letter-spacing: -0.007142857em; //#{tokens.$cds-alias-typography-body-letter-spacing};
 
     //P1 - card text, dropdown_text, page_bodyText, tab_text, toc_text
     //'BODY-14-RG-STD'
@@ -89,7 +89,7 @@
     --clr-p1-font-size: #{tokens.$cds-alias-typography-body-font-size};
     --clr-p1-font-weight: #{tokens.$cds-alias-typography-body-font-weight};
     --clr-p1-line-height: 1.4285714em; // #{tokens.$cds-alias-typography-body-line-height};
-    --clr-p1-letter-spacing: -0.007142857; //#{tokens.$cds-alias-typography-body-letter-spacing};
+    --clr-p1-letter-spacing: -0.007142857em; //#{tokens.$cds-alias-typography-body-letter-spacing};
 
     //P2 - form_label, stackview_header
     //'SECONDARY-13-MD-EXP'
